[NIFI-12698] dark mode, [NIFI-12687] status history axis label fix

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/access-policies/ui/component-access-policies/_component-access-policies.component-theme.scss
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/pages/access-policies/ui/component-access-policies/_component-access-policies.component-theme.scss
@@ -18,7 +18,7 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-@mixin theme($material-theme, $canvas-theme) {
+@mixin nifi-theme($material-theme, $canvas-theme) {
     // Get the color config from the theme.
     $color-config: mat.get-color-config($material-theme);
     $canvas-color-config: mat.get-color-config($canvas-theme);
@@ -29,7 +29,7 @@
     $canvas-primary-palette: map.get($canvas-color-config, 'primary');
 
     // Get hues from palette
-    $primary-palette-500: mat.get-color-from-palette($primary-palette, 500);
+    $primary-palette-700: mat.get-color-from-palette($primary-palette, 700);
     $warn-palette-A200: mat.get-color-from-palette($warn-palette, 'A200');
     $canvas-primary-palette-A200: mat.get-color-from-palette($canvas-primary-palette, 'A200');
 
@@ -45,7 +45,7 @@
         }
 
         .operation-context-type {
-            color: $primary-palette-500;
+            color: $primary-palette-700;
         }
     }
 }
