--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/property-table/editors/nf-editor/_nf-editor.component-theme.scss
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-frontend/src/main/nifi/src/app/ui/common/property-table/editors/nf-editor/_nf-editor.component-theme.scss
@@ -18,7 +18,7 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-@mixin theme($material-theme, $canvas-theme) {
+@mixin nifi-theme($material-theme, $canvas-theme) {
     // Get the color config from the theme.
     $color-config: mat.get-color-config($material-theme);
     $canvas-color-config: mat.get-color-config($canvas-theme);
@@ -30,9 +30,10 @@
     // Get hues from palette
     $primary-palette-100: mat.get-color-from-palette($primary-palette, 100);
     $primary-palette-300: mat.get-color-from-palette($primary-palette, 300);
+    $canvas-primary-palette-100: mat.get-color-from-palette($canvas-primary-palette, 100);
     $canvas-primary-palette-200: mat.get-color-from-palette($canvas-primary-palette, 200);
     $canvas-primary-palette-300: mat.get-color-from-palette($canvas-primary-palette, 300);
-    $canvas-primary-palette-900: mat.get-color-from-palette($canvas-primary-palette, 900);
+    $canvas-primary-palette-contrast-900: mat.get-color-from-palette($canvas-primary-palette, 'contrast-900');
 
     .property-editor {
         @include mat.button-density(-1);
@@ -40,7 +41,7 @@
         .nf-editor {
             .CodeMirror {
                 border: 1px solid $canvas-primary-palette-300;
-                background-color: $canvas-primary-palette-900;
+                background-color: $canvas-primary-palette-contrast-900;
 
                 &.blank {
                     background: $primary-palette-300;
